<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assist.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/gap_20_s"
        android:layout_marginBottom="@dimen/gap_20_s">

        <TextView
            android:id="@+id/rSetting_userNum_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_number_selected" />

        <Button
            android:text="@string/immediately_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rSetting_user_Btn"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="@dimen/gap_20_s">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rSetting_commodityNum_tv"
            android:text="@string/commodity_number_selected" />

        <Button
            android:text="@string/immediately_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rSetting_commodity_Btn"
            android:layout_weight="1" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/gap_20_s"
        android:id="@+id/rSetting_rg">

        <RadioButton
            android:text="@string/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rSetting_random_rb"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/sequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rSetting_sequence_rb"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_20_s">

        <TextView
            android:text="@string/time_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_20_s">

        <TextView
            android:text="@string/robot_work_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginBottom="@dimen/gap_20_s" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner2"
            android:id="@+id/spinner3"
            android:layout_alignLeft="@+id/spinner2"
            android:layout_alignStart="@+id/spinner2" />
    </RelativeLayout>

    <Button
        android:text="@string/setting_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rSelect_complete_btn" />

</LinearLayout>
